refactor(exceptions): improve log errors on global exception handler